--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/jquery.min.js')
+    script(src='/javascripts/handlebars.js')
+    script(src='/javascripts/ember.min.js')
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/dcdeck.js')
   body
