--- a/views/admin.jade
+++ b/views/admin.jade
@@ -20,3 +20,7 @@ block content
   form(action='/load-cards', method='post')
     p
       input(type='submit', value='Load Cards')
+
+  form(action='/load-players', method='post')
+    p
+      input(type='submit', value='Load Players')
