--- a/views/index.jade
+++ b/views/index.jade
@@ -48,6 +48,7 @@ block content
       <div class="card">
         <div class="name">{{this.name}}</div>
         <div class="middle">
+          <div>{{this.type}}</div>
           <div>Power:{{this.power}}</div>
           <div class="description">{{this.description}}</div>
         </div>
@@ -69,10 +70,10 @@ block content
           <p><em>{{this.superhero.0.description}}</em></p>
         </section>
         <section>
-          <h3>Discard</h3>
+          <h3>Discard ({{this.discard.length}})</h3>
         </section>
         <section>
-          <h3>Deck</h3>
+          <h3>Deck ({{this.deck.length}})</h3>
           {{#if this.is_turn}}
           <input class="end-turn" player="{{this._id}}" type="button" value="End Turn" />
           {{/if}}
@@ -84,6 +85,7 @@ block content
           <div class="card">
             <div class="name">{{this.name}}</div>
             <div class="middle">
+              <div>{{this.type}}</div>
               <div>Power:{{this.power}}</div>
               <div class="description">{{this.description}}</div>
             </div>
